Button background fixed on safari

--- a/homework-1/style.css
+++ b/homework-1/style.css
@@ -316,6 +316,7 @@ label {
     color: #00BCD4;
     font-size: 16px;
     cursor: pointer;
+    background:none;
 }
 
 .btn:hover {
